Java 21, Gradle 9.0 Config and Setting for Use Project